--- a/src/aura/AS_Community_ProductDetailsCarousel/AS_Community_ProductDetailsCarousel.cmp
+++ b/src/aura/AS_Community_ProductDetailsCarousel/AS_Community_ProductDetailsCarousel.cmp
@@ -10,7 +10,7 @@
 >
     <lightning:carousel disableAutoScroll="true">
         <lightning:carouselImage
-                src="path/to/carousel-01.jpg"
+                src=""
                 header="First card"
                 description="First card description"
                 alternativeText="This is a card"
@@ -32,3 +32,28 @@
         </lightning:carouselImage>
     </lightning:carousel>
 </aura:component>
+
+
+<!--<lightning:carousel disableAutoScroll="true">-->
+<!--    <lightning:carouselImage-->
+<!--            src="path/to/carousel-01.jpg"-->
+<!--            header="First card"-->
+<!--            description="First card description"-->
+<!--            alternativeText="This is a card"-->
+<!--            href="https://www.example.com">-->
+<!--    </lightning:carouselImage>-->
+<!--    <lightning:carouselImage-->
+<!--            src="path/to/carousel-02.jpg"-->
+<!--            header="Second card"-->
+<!--            description="Second card description"-->
+<!--            alternativeText="This is a card"-->
+<!--            href="https://www.example.com">-->
+<!--    </lightning:carouselImage>-->
+<!--    <lightning:carouselImage-->
+<!--            src="path/to/carousel-03.jpg"-->
+<!--            header="Third card"-->
+<!--            description="Third card description"-->
+<!--            alternativeText="This is a card"-->
+<!--            href="https://www.example.com">-->
+<!--    </lightning:carouselImage>-->
+<!--</lightning:carousel>-->
