--- a/src/aura/CustomTemplate/CustomTemplate.cmp
+++ b/src/aura/CustomTemplate/CustomTemplate.cmp
@@ -2,24 +2,66 @@
     <aura:attribute name="search" type="Aura.Component[]" required="false"/>
     <aura:attribute name="profileMenu" type="Aura.Component[]" required="false"/>
     <aura:attribute name="navBar" type="Aura.Component[]" required="false"/>
+    <aura:attribute name="navBarTest" type="Aura.Component[]" required="false"/>
+    <aura:attribute name="firstHeader" type="Aura.Component[]" required="false"/>
+    <aura:attribute name="basket" type="Aura.Component[]" required="false"/>
     <aura:attribute name="actions" type="Aura.Component[]" required="false"/>
+    <aura:attribute name="header" type="Aura.Component[]" required="false"/>
     <aura:attribute name="testForBasket" type="Aura.Component[]" required="false"/>
     <div>
         <lightning:layout multipleRows="true">
-            <Lightning:layoutItem size='8'>
-                <div class="">
-                    <!-- Search Publisher component -->
-                    {!v.search}
 
+            <Lightning:layoutItem size="12">
+                <div class="navigation">
+                    <!-- Navigation Menu component -->
+                    {!v.firstHeader}
+<div><h1>X</h1></div>
+<div><h1>X</h1></div>
+<div><h1>X</h1></div>
+<div><h1>X</h1></div>
                 </div>
             </Lightning:layoutItem>
-            <Lightning:layoutItem size='8'>
-                <div class="searchRegion">
-                    <!-- Search Publisher component -->
-                    {!v.search}
 
+<!--            ///////WYSZUKIWARKA/////////////////-->
+<!--            <Lightning:layoutItem size='12'>-->
+<!--                <div class="searchRegion">-->
+<!--                    &lt;!&ndash; Search Publisher component &ndash;&gt;-->
+<!--                    {!v.search}-->
+
+<!--                </div>-->
+<!--            </Lightning:layoutItem>-->
+
+<!--            <Lightning:layoutItem size="2">-->
+<!--                <div class="profileMenuRegion">-->
+<!--                    &lt;!&ndash; User Profile Menu component &ndash;&gt;-->
+<!--                    {!v.profileMenu}-->
+
+<!--                </div>-->
+<!--            </Lightning:layoutItem>-->
+
+<!--            <Lightning:layoutItem size="2">-->
+<!--                <div class="newHeader">-->
+<!--            {!v.actions}-->
+<!--    </div>-->
+<!--            </Lightning:layoutItem>-->
+
+<!--            //////WYSZUKIWARKA///////////////-->
+
+
+<!--            ////NAWIGACJA///////////////////-->
+            <Lightning:layoutItem size="10">
+                <div class="navigation">
+                    <!-- Navigation Menu component -->
+                    {!v.navBarTest}
                 </div>
             </Lightning:layoutItem>
+
+<!--            <Lightning:layoutItem size="1">-->
+<!--                <div class="newHeader">-->
+<!--                    &lt;!&ndash; Navigation Menu component &ndash;&gt;-->
+<!--                    {!v.basket}-->
+<!--                </div>-->
+<!--            </Lightning:layoutItem>-->
 
             <Lightning:layoutItem size="2">
                 <div class="profileMenuRegion">
@@ -29,12 +71,9 @@
                 </div>
             </Lightning:layoutItem>
 
-            <Lightning:layoutItem size="2">
-                <div class="newHeader">
-            {!v.actions}
-    </div>
-            </Lightning:layoutItem>
 
+
+<!--            ///////////NAVIGACJA///////////////////-->
             <Lightning:layoutItem size="12">
                 <div class="navigation">
                     <!-- Navigation Menu component -->
