home and product detail page

--- a/src/aura/AS_Community_ProductDetailsCarousel/AS_Community_ProductDetailsCarousel.cmp
+++ b/src/aura/AS_Community_ProductDetailsCarousel/AS_Community_ProductDetailsCarousel.cmp
@@ -3,55 +3,33 @@
  -->
 
 <aura:component
+        controller="AS_ProductViewController"
         implements="flexipage:availableForAllPageTypes,
                 forceCommunity:availableForAllPageTypes,
+                flexipage:availableForRecordHome,
                  force:appHostable,
                  force:hasRecordId"
 >
-<!--    <meta http-equiv="Content-Security-Policy"-->
-<!--          content="-->
-<!--      worker-src blob:;-->
-<!--      child-src blob: gap:;-->
-<!--      img-src 'self' blob: data:;-->
-<!--      default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap: content:"/>-->
-    <lightning:carousel disableAutoScroll="true">
-
-<!--        src="/sfc/servlet.shepherd/version/download/0687R00000FWkGsQAL"-->
-
-            <lightning:carouselImage
-                    src="https://images.squarespace-cdn.com/content/5d53774433625c0001cda502/1565751640043-L2EWSD0S6NLRF6DTEQPI/Untitled+design+%282%29.png?content-type=image%2Fpng"
-                    header="First card"
-                    description="First card description"
-                    alternativeText="This is a card"
-                    href="https://www.example.com">
-            </lightning:carouselImage>
-
-
-    </lightning:carousel>
-<!--    <img src="https://athletic-stuff-dev-ed.lightning.force.com/sfc/servlet.shepherd/version/download/0687R00000FWkGsQAL"/>-->
-</aura:component>
-
-
-<!--<lightning:carousel disableAutoScroll="true">-->
-<!--    <lightning:carouselImage-->
-<!--            src="path/to/carousel-01.jpg"-->
-<!--            header="First card"-->
-<!--            description="First card description"-->
-<!--            alternativeText="This is a card"-->
-<!--            href="https://www.example.com">-->
-<!--    </lightning:carouselImage>-->
-<!--    <lightning:carouselImage-->
-<!--            src="path/to/carousel-02.jpg"-->
-<!--            header="Second card"-->
-<!--            description="Second card description"-->
-<!--            alternativeText="This is a card"-->
-<!--            href="https://www.example.com">-->
-<!--    </lightning:carouselImage>-->
-<!--    <lightning:carouselImage-->
-<!--            src="path/to/carousel-03.jpg"-->
-<!--            header="Third card"-->
-<!--            description="Third card description"-->
-<!--            alternativeText="This is a card"-->
-<!--            href="https://www.example.com">-->
-<!--    </lightning:carouselImage>-->
-<!--</lightning:carousel>-->
+        <aura:attribute name="product" type="Object"/>
+        <aura:attribute name="pictures" type="List"/>
+        <aura:attribute name="recordLoadError" type="String"/>
+        <aura:handler name="init" value="{!this}" action="{!c.init}"/>
+        <force:recordData recordId="{!v.recordId}"
+                          fields="Name, Description"
+                          targetFields="{!v.product}"
+                          targetError="{!v.recordLoadError}"
+        />
+    <div class="carousel-div">
+        <lightning:layout multipleRows="true" class="prd-carousel">
+            <lightning:layoutItem size="6">
+                <lightning:carousel disableAutoRefresh="false" disableAutoScroll="false" scrollDuration="3">
+                    <aura:iteration items="{!v.pictures}" var="picture">
+                        <lightning:carouselImage
+                                src = "{!'https://athletic-stuff-dev-ed.lightning.force.com/sfc/servlet.shepherd/version/download/' + picture.documentId}">
+                        </lightning:carouselImage>
+                    </aura:iteration>
+                </lightning:carousel>
+            </lightning:layoutItem>
+        </lightning:layout>
+    </div>
+    </aura:component>
