--- a/src/aura/AS_Community_SearchEngine/AS_Community_SearchEngine.cmp
+++ b/src/aura/AS_Community_SearchEngine/AS_Community_SearchEngine.cmp
@@ -1,31 +1,45 @@
-<aura:component description="AS_Community_SearchEngine" controller="AS_Community_SearchEngineController"
-                implements="flexipage:availableForAllPageTypes,
-                forceCommunity:availableForAllPageTypes,
-                 force:appHostable,
-                 force:hasRecordId
-">
+<aura:component description="AS_Community_SearchEngine"
+                implements="flexipage:availableForAllPageTypes, forceCommunity:availableForAllPageTypes, force:appHostable"
+>
+    <div class="slds-card">
+        <div class="topnav">
+            <div class="search-container">
+                <form class="slds-form--inline">
+                    <lightning:input class="myinpt" type="text" placeholder="Type name or product code" name="search"/>
+                    <lightning:buttonIcon iconName="utility:search"  class="mybtn"/>
+                </form>
+            </div>
+        </div>
+    </div>
+    </aura:component>
+
+
+
+
+
+
 <!--    <aura:attribute name="productName" type="String" />-->
 <!--    <aura:attribute name="searchProduct" type="Aura.Action" />-->
 
-    <div class="slds-card">
+<!--    <div class="slds-card">-->
 
-<!--        <div class="topnav">-->
-<!--            <div class="search-container">-->
-<!--                <form class="slds-form&#45;&#45;inline">-->
-<!--                    <lightning:input class="myinpt" type="text" placeholder="Search..." name="search" value="{!v.productName}" />-->
-<!--                    <lightning:buttonIcon iconName="utility:search" onclick="{!v.searchProduct}" class="mybtn"/>-->
-<!--                </form>-->
-                {!v.recordId}
-                {!v.recordId}
-                {!v.recordId}
-                {!v.recordId}
-                {!v.recordId}
-                {!v.recordId}
-                {!v.recordId}
-                {!v.recordId}
-                {!v.recordId}
-                {!v.recordId}
-<!--            </div>-->
-<!--        </div>-->
-    </div>
-</aura:component>
+<!--&lt;!&ndash;        <div class="topnav">&ndash;&gt;-->
+<!--&lt;!&ndash;            <div class="search-container">&ndash;&gt;-->
+<!--&lt;!&ndash;                <form class="slds-form&#45;&#45;inline">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <lightning:input class="myinpt" type="text" placeholder="Search..." name="search" value="{!v.productName}" />&ndash;&gt;-->
+<!--&lt;!&ndash;                    <lightning:buttonIcon iconName="utility:search" onclick="{!v.searchProduct}" class="mybtn"/>&ndash;&gt;-->
+<!--&lt;!&ndash;                </form>&ndash;&gt;-->
+<!--                {!v.recordId}-->
+<!--                {!v.recordId}-->
+<!--                {!v.recordId}-->
+<!--                {!v.recordId}-->
+<!--                {!v.recordId}-->
+<!--                {!v.recordId}-->
+<!--                {!v.recordId}-->
+<!--                {!v.recordId}-->
+<!--                {!v.recordId}-->
+<!--                {!v.recordId}-->
+<!--&lt;!&ndash;            </div>&ndash;&gt;-->
+<!--&lt;!&ndash;        </div>&ndash;&gt;-->
+<!--    </div>-->
+<!--</aura:component>-->
