--- a/src/aura/AS_Community_Basket/AS_Community_Basket.cmp
+++ b/src/aura/AS_Community_Basket/AS_Community_Basket.cmp
@@ -9,7 +9,7 @@
                  force:hasRecordId"
 >
 
-    <ul>
+    <ul class="ul-basket">
         <li class="slds-context-bar__item">
             <a class="slds-context-bar__label-action">
                         <span class="slds-truncate">
