--- a/src/aura/AS_Community_Tabs/AS_Community_Tabs.cmp
+++ b/src/aura/AS_Community_Tabs/AS_Community_Tabs.cmp
@@ -8,108 +8,57 @@
                  force:appHostable,
                  force:hasRecordId"
 >
-    <aura:attribute name="cartItemsValue" type="Integer" />
-    <aura:attribute name="totalPrice" type="Integer" />
-    <aura:attribute name="cartItems" type="List" />
+    <aura:attribute name="cartItemsValue" type="Integer"/>
+    <aura:attribute name="totalPrice" type="Integer"/>
+    <aura:attribute name="cartItems" type="List"/>
 
-<!--    <aura:handler name="init" value="{!this}" action="{!c.onInit}"/>-->
-<!--    <aura:handler event="c:KEC_refreshCartBadge" action="{!c.onInit}" />-->
+    <!--    <aura:handler name="init" value="{!this}" action="{!c.onInit}"/>-->
+    <!--    <aura:handler event="c:KEC_refreshCartBadge" action="{!c.onInit}" />-->
 
-    <div class="slds-context-bar">
-        <div class="slds-context-bar__primary">
-            <div class="slds-context-bar__item slds-context-bar__dropdown-trigger slds-dropdown-trigger slds-dropdown-trigger_click slds-no-hover">
-                <div class="slds-context-bar__icon-action">
-                </div>
-                <span class="slds-context-bar__label-action slds-context-bar__app-name">
-        <span class="slds-truncate">Athletic Stuff</span>
-      </span>
+    <div class="main-menu-container">
+        <div class="nav-logo"><p>Athletic Stuff</p></div>
+        <nav class="main-nav" role="navigation">
+            <div class="nav-tabs">
+                <ul>
+                    <li><a><span>Home</span></a></li>
+                    <li><a><span>Complaints</span></a></li>
+                    <li><a><span>Orders</span></a></li>
+                </ul>
             </div>
-        </div>
-        <nav class="slds-context-bar__secondary" role="navigation">
-            <ul class="slds-grid">
-                <li class="slds-context-bar__item slds-is-active">
-                    <a class="slds-context-bar__label-action">
-                        <span class="slds-truncate mynavitem" >Home</span>
-                    </a>
-                </li>
-                <li class="slds-context-bar__item">
-                    <a class="slds-context-bar__label-action">
-                        <span class="slds-truncate mynavitem" >Products</span>
-                    </a>
-                </li>
-                <li class="slds-context-bar__item">
-                    <a class="slds-context-bar__label-action">
-                        <span class="slds-truncate mynavitem" >LoyPr</span>
-                    </a>
-                </li>
-                <li class="slds-context-bar__item lasttextitem">
-                    <a class="slds-context-bar__label-action">
-                        <span class="slds-truncate mynavitem" >orders</span>
-                    </a>
-                </li>
-                <li class="slds-context-bar__item">
-                    <a class="slds-context-bar__label-action">
-<!--                        <span class="slds-truncate" >-->
-<!--                            <lightning:icon iconName="utility:cart"/>-->
-<!--                            <lightning:badge />-->
-<!--                            <section aura:id="pop" class="slds-popover slds-nubbin_top-right slds-hide" role="dialog" aria-labelledby="dialog-heading-id-1" aria-describedby="dialog-body-id-6">-->
-<!--                            <header class="slds-popover__header slds-p-vertical_medium">-->
-<!--                                <h2 id="dialog-heading-id-1" class="slds-text-heading_medium">{!$Label.c.KEC_Basket}</h2>-->
-<!--                            </header>-->
-<!--                            <div class="slds-popover__body" id="dialog-body-id-6">-->
-<!--                                <aura:if isTrue="{!v.cartItems.length != 0}">-->
-<!--                                    <table>-->
-<!--                                    <aura:iteration items="{!v.cartItems}" var="item">-->
-<!--                                        <tr>-->
-<!--                                            <td>-->
-<!--                                                <img src="{!item.product.Product2.ImgPath__c}" width="50" height="100"/>-->
-<!--                                            </td>-->
-<!--                                            <td>-->
-<!--                                                <span class="productname">{!item.product.Product2.Name}</span><br/>-->
-<!--                                                <span class="mylabel">{!$Label.c.KEC_ColorLabel + ' '}</span><span class="mydesc">{!item.color}</span><br/>-->
-<!--                                                <span class="mylabel">{!$Label.c.KEC_SizeLabel + ' '}</span><span class="mydesc">{!item.size}</span><br/>-->
-<!--                                                <span class="mylabel">{!$Label.c.KEC_QuantityLabel + ' '}</span><span class="mydesc">{!item.quantity}</span>-->
-<!--                                            </td>-->
-<!--                                            <td class="totalprice">-->
-<!--                                                <aura:if isTrue="{!or(item.product.Product2.BestPrice__c == null, item.product.Product2.BestPrice__c == item.product.UnitPrice)}">-->
-<!--                                                    <span>{!item.quantity * item.product.UnitPrice}{!$Label.c.KEC_PricePostfix}</span><br/>-->
-<!--                                                </aura:if>-->
-<!--                                                <aura:if isTrue="{!and(item.product.Product2.BestPrice__c != null, greaterthan(item.product.UnitPrice, item.product.Product2.BestPrice__c))}">-->
-<!--                                                    <span>{!item.quantity * item.product.Product2.BestPrice__c}{!$Label.c.KEC_PricePostfix}</span><br/>-->
-<!--                                                </aura:if>-->
-<!--                                            </td>-->
-<!--                                        </tr>-->
-<!--                                    </aura:iteration>-->
-<!--                                    </table>-->
-<!--                                    <span class="summary">{!$Label.c.KEC_TotalPriceLabel + ' ' + v.totalPrice + $Label.c.KEC_PricePostfix}</span><br/>-->
-<!--                                    <lightning:button label="{!$Label.c.KEC_GoToBasket}" class="basketbtn" onclick="{!c.toBasket}"/>-->
-<!--                                </aura:if>-->
-<!--                                <aura:if isTrue="{!v.cartItems.length == 0}">-->
-<!--                                    <span>{!$Label.c.KEC_EmptyCart}</span>-->
-<!--                                </aura:if>-->
-<!--                            </div>-->
-<!--                            <footer class="slds-popover__footer">-->
-<!--                            </footer>-->
-<!--                        </section>-->
-<!--                        </span>-->
-                    </a>
-                </li>
-<!--                <li class="slds-context-bar__item">-->
-<!--                    <a class="slds-context-bar__label-action">-->
-<!--                        <span class="slds-truncate">-->
-<!--                            <lightning:icon iconName="utility:favorite"/>-->
-<!--                        </span>-->
-<!--                    </a>-->
-<!--                </li>-->
-                <li class="slds-context-bar__item">
-                    <a class="slds-context-bar__label-action">
-                        <span class="slds-truncate">
-                             <lightning:icon iconName="utility:cart"/>
-                        </span>
-                    </a>
-                </li>
-            </ul>
+
         </nav>
     </div>
 
 </aura:component>
+
+
+<!--<div class="slds-context-bar">-->
+<!--    <div class="slds-context-bar__primary">-->
+<!--        <div class="slds-context-bar__item slds-context-bar__dropdown-trigger slds-dropdown-trigger slds-dropdown-trigger_click slds-no-hover">-->
+<!--            <div class="slds-context-bar__icon-action">-->
+<!--            </div>-->
+<!--            <span class="slds-context-bar__label-action slds-context-bar__app-name">-->
+<!--        <span class="slds-truncate">Athletic Stuff</span>-->
+<!--      </span>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <nav class="slds-context-bar__secondary" role="navigation">-->
+<!--        <ul class="slds-grid">-->
+<!--            <li class="slds-context-bar__item slds-is-active">-->
+<!--                <a class="slds-context-bar__label-action">-->
+<!--                    <span class="slds-truncate mynavitem">Home</span>-->
+<!--                </a>-->
+<!--            </li>-->
+<!--            <li class="slds-context-bar__item">-->
+<!--                <a class="slds-context-bar__label-action">-->
+<!--                    <span class="slds-truncate mynavitem">Complaints</span>-->
+<!--                </a>-->
+<!--            </li>-->
+<!--            <li class="slds-context-bar__item lasttextitem">-->
+<!--                <a class="slds-context-bar__label-action">-->
+<!--                    <span class="slds-truncate mynavitem">orders</span>-->
+<!--                </a>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--    </nav>-->
+<!--</div>-->
