--- a/src/aura/WU_CustomerReviewsShow/WU_CustomerReviewsShow.cmp
+++ b/src/aura/WU_CustomerReviewsShow/WU_CustomerReviewsShow.cmp
@@ -12,10 +12,11 @@
             <div class="slds-container_center slds-grid_pull-padded-medium" style="margin-bottom: 20px;">
                     <lightning:button onclick="{!c.onGetFirstPageReviews}" label="Go To first page"/>
                 <aura:if isTrue="{!v.response.previousPage}">
-                    <lightning:button onclick="{!c.onGetPreviousPage}"
-                                      label="{!'Previous page: ' + v.response.previousPage}"/>
+                    <lightning:button onclick="{!c.onGetPreviousPage}" label="{!'Previous page: ' + v.response.previousPage}"/>
                 </aura:if>
+
                 <lightning:button label="{!v.response.currentPage}" class="current-page"/>
+
                 <aura:if isTrue="{!v.response.nextPage}">
                     <lightning:button onclick="{!c.onGetNextPage}" label="{!'Next page: ' + v.response.nextPage}"/>
                 </aura:if>
@@ -23,6 +24,7 @@
                 <lightning:button label="{!v.response.allPages}"/>
             </div>
             </lightning:layout>
+
             <ul class="slds-feed__list">
                 <aura:iteration items="{!v.response.reviews}" var="review">
                     <li class="slds-feed__item">
