--- a/src/aura/AS_Community_ProductDetailsCarousel/AS_Community_ProductDetailsCarousel.cmp
+++ b/src/aura/AS_Community_ProductDetailsCarousel/AS_Community_ProductDetailsCarousel.cmp
@@ -23,14 +23,12 @@
             <lightning:layoutItem size="6">
                 <lightning:carousel disableAutoRefresh="false" disableAutoScroll="false" scrollDuration="3">
                     <aura:iteration items="{!v.pictures}" var="picture">
-                        <!--                        src = "{!'https://athletic-stuff-dev-ed.lightning.force.com/sfc/servlet.shepherd/version/download/' + picture.documentId}">-->
-                        <!--                        src = "{!'/sfc/servlet.shepherd/version/download/' + picture.documentId}">-->
-                        <!--                        src = "{!'/athletic-stuff-developer-edition.eu45.force.com/sfc/servlet.shepherd/document/download/' + picture.documentId}">-->
 
                         <lightning:carouselImage
-                                src="{!'https://athletic-stuff-dev-ed.lightning.force.com/sfc/servlet.shepherd/version/download/' + picture.documentId}">
+                                src="{!'/as/sfc/servlet.shepherd/version/download/' + picture.documentId}">
 
                         </lightning:carouselImage>
+
                     </aura:iteration>
                 </lightning:carousel>
             </lightning:layoutItem>
