change query builder

--- a/src/aura/AS_Community_ProductMiniLayout/AS_Community_ProductMiniLayout.cmp
+++ b/src/aura/AS_Community_ProductMiniLayout/AS_Community_ProductMiniLayout.cmp
@@ -25,7 +25,7 @@ controller="AS_ProductViewController">
         </div>
         <div class="product-mini-desc">
         <p class="product-name">{!v.product.productName}</p>
-            <p class="product-price">Price: {!v.product.price}</p>
+            <p class="product-price">Price: {!v.product.price} $</p>
         </div>
     </ui:button>
     </lightning:layout>
