--- a/src/aura/AS_Community_ProductSearchList/AS_Community_ProductSearchList.css
+++ b/src/aura/AS_Community_ProductSearchList/AS_Community_ProductSearchList.css
@@ -82,3 +82,11 @@
     margin: 0 1rem;
     font-size: 1.5rem;
 }
+
+.THIS .hideElement{
+    display: none;
+}
+
+.THIS .showElement {
+    display: flex;
+}
