--- a/src/aura/AS_Community_Theme/AS_Community_Theme.cmp
+++ b/src/aura/AS_Community_Theme/AS_Community_Theme.cmp
@@ -47,6 +47,7 @@
                         </div>
                     </Lightning:layoutItem>
                 </div>
+                <div class="mainMenu-margin"></div>
             </div>
 
             <Lightning:layoutItem size="12">
