--- a/src/aura/AS_Community_Theme/AS_Community_Theme.css
+++ b/src/aura/AS_Community_Theme/AS_Community_Theme.css
@@ -64,3 +64,11 @@ background-color: rgb(201, 199, 197);
     height: 32px;
     border: 1px solid #d4d4d4;
 }
+
+.THIS .mainMenu-margin{
+
+    width: 100%;
+    height: 2rem;
+    margin-top:2rem;
+
+}
