--- a/src/aura/AS_Community_SearchEngine/AS_Community_SearchEngine.css
+++ b/src/aura/AS_Community_SearchEngine/AS_Community_SearchEngine.css
@@ -42,6 +42,21 @@
     border: none;
     width: 100% ;
     /*margin-left: 10px;*/
+    outline: none ;
+    box-shadow: none;
+}
+
+.THIS .slds-input{
+    box-shadow: none;
+
+}
+
+.THIS .myinpt label{
+    display: none;
+}
+
+.THIS .slds-form--inline button {
+    box-shadow: none;
 }
 
 .THIS .mybtn{
@@ -53,12 +68,15 @@
 }
 
 .THIS .slds-form-element__control .slds-grow {
-    width: 90%;
+    width: 85%;
     border: 1px solid gray;
 }
 
 .THIS .slds-input {
     border: none;
-    width: 90%;
     border-radius: 0px;
+}
+
+.THIS .slds-form--compound, .THIS .slds-form_compound{
+    outline:none;
 }
